rocket_codegen-0.5.1/tests/ui-fail-nightly/route-warnings.stderr
warning: 'application/x-custom' is not a known format or media type
 --> tests/ui-fail-nightly/route-warnings.rs:7:21
  |
7 | #[get("/", format = "application/x-custom")]
  |                     ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: apply `#[suppress(unknown_format)]` before the item to suppress this lint

warning: 'x-custom/plain' is not a known format or media type
  --> tests/ui-fail-nightly/route-warnings.rs:10:21
   |
10 | #[get("/", format = "x-custom/plain")]
   |                     ^^^^^^^^^^^^^^^^
   |
   = note: apply `#[suppress(unknown_format)]` before the item to suppress this lint

warning: 'x-custom/x-custom' is not a known format or media type
  --> tests/ui-fail-nightly/route-warnings.rs:13:21
   |
13 | #[get("/", format = "x-custom/x-custom")]
   |                     ^^^^^^^^^^^^^^^^^^^
   |
   = note: apply `#[suppress(unknown_format)]` before the item to suppress this lint

warning: `data` used with non-payload-supporting method
  --> tests/ui-fail-nightly/route-warnings.rs:22:12
   |
22 | #[get("/", data = "<_foo>")]
   |            ^^^^^^^^^^^^^^^
   |
   = note: 'GET' does not typically support payloads
   = note: apply `#[suppress(dubious_payload)]` before the item to suppress this lint

warning: `data` used with non-payload-supporting method
  --> tests/ui-fail-nightly/route-warnings.rs:25:13
   |
25 | #[head("/", data = "<_foo>")]
   |             ^^^^^^^^^^^^^^^
   |
   = note: 'HEAD' does not typically support payloads
   = note: apply `#[suppress(dubious_payload)]` before the item to suppress this lint

error: checking for warnings!
  --> tests/ui-fail-nightly/route-warnings.rs:33:5
   |
33 |     compile_error!("checking for warnings!")
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
